# f1-prediction

./: .gitignore
api/: index.py
f1-predictor/: .gitignore  README.md  SMOKE_TEST_CHECKLIST.md  pyproject.toml  requirements-pipeline.txt  requirements.txt  vercel.json
f1-predictor/api/: index.py
f1-predictor/src/f1_predictor/: __init__.py  demo.py  demo_export.py  pipeline.py  settings.py
f1-predictor/src/f1_predictor/api/: main.py  serve.py
f1-predictor/src/f1_predictor/demo_data/metrics/: backtest_metrics.csv  podium_calibration.csv  train_metrics.json
f1-predictor/src/f1_predictor/demo_data/models/: model_metadata.json
f1-predictor/src/f1_predictor/demo_data/processed/: dataset_metadata.json  latest_predictions.parquet  qualifying.parquet  races.parquet  schedule.parquet
f1-predictor/src/f1_predictor/demo_data/processed/rich/: events.parquet  pre_race_features.parquet  session_conditions.parquet  stint_summaries.parquet  tyre_usage.parquet
f1-predictor/src/f1_predictor/demo_data/processed/rich/simulations/: demo_export_manifest.json  finish_distributions.parquet  simulation_metadata.json  (+1 more)
f1-predictor/src/f1_predictor/features/: make_dataset.py  pipeline.py  practice_features.py  rich_features.py
f1-predictor/src/f1_predictor/ingest/: __init__.py  openf1.py  pipeline.py  rich_pipeline.py  upgrade_news.py
f1-predictor/src/f1_predictor/models/: __init__.py  backtest.py  predict.py  predict_next.py  train.py
f1-predictor/src/f1_predictor/simulations/: __init__.py  monte_carlo.py
f1-predictor/src/f1_predictor/web/: app.js  index.html  styles.css
