[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-predictor"
version = "0.1.0"
description = "Baseline Formula 1 prediction pipeline with FastF1, scikit-learn, FastAPI, and a static frontend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "fastf1>=3.3",
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "pydantic>=2.7",
  "scikit-learn>=1.4",
  "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
f1_predictor = [
  "web/*.html",
  "web/*.css",
  "web/*.js",
  "demo_data/processed/*.parquet",
  "demo_data/processed/*.json",
  "demo_data/models/*.joblib",
  "demo_data/models/*.json",
  "demo_data/metrics/*.csv",
]

[project.scripts]
f1-ingest = "f1_predictor.ingest.pipeline:main"
f1-ingest-rich = "f1_predictor.ingest.rich_pipeline:main"
f1-features = "f1_predictor.features.pipeline:main"
f1-features-rich = "f1_predictor.features.rich_features:main"
f1-train = "f1_predictor.models.train:main"
f1-backtest = "f1_predictor.models.backtest:main"
f1-predict-next = "f1_predictor.models.predict:main"
f1-retrain = "f1_predictor.pipeline:main"
f1-demo = "f1_predictor.demo:main"
f1-serve = "f1_predictor.api.serve:main"
